--- a/index.html
+++ b/index.html
@@ -55,8 +55,13 @@
 
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
-            <h1 class="title">Manthan Pathak</h1>
-            <p class="section__text__p2">Frontend Developer</p>
+
+             <div class="name-title">
+                <span id="name"></span>
+            </div>
+            
+            <span class="section__text__p2">Front-end Developer</span>
+
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./asset/Manthan_Pathak.pdf')">Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href ='./#contact'">Contact</button>
@@ -80,7 +85,7 @@
                     <div class="details-container">
                         <img src="./asset/Experience.png" alt="Experience icon" class="icon">
                         <h3>Experience</h3>
-                        <p class="box-text">0-1 years <br>Frontend Development</p>
+                        <p class="box-text">0-1 year <br>Frontend Development</p>
                     </div>
                     <div class="details-container" >
                         <img src="./asset/Education.png" alt="Education icon" class="icon">
@@ -106,11 +111,27 @@
     </section>
 
     <section id="Experience">
-        <p class="section__text__p1">Explore More About Me</p>
+        <p class="section__text__p1">Explore More About my</p>
         <h1 class="title">Experience</h1>
         <div class="experience-details-container">
             <div class="about-containers">
-                <div class="details-container">
+                <div class="work-details">
+                    <h2 class="work-head">I am working with DMV RTech. :</h2>
+                    <div class="text-container">
+                        <p>As a Front-End Developer Intern at DMV RTech., I have the opportunity 
+                        to enhance my skills in developing responsive and visually appealing user 
+                        interfaces using HTML, CSS, and JavaScript. I collaborate closely with UX/UI 
+                        designers and back-end developers to create seamless and efficient web applications. 
+                        My responsibilities include optimizing website performance, ensuring cross-browser 
+                        compatibility, and implementing best practices for code efficiency. I also engage 
+                        in testing and debugging processes to maintain high functionality standards. Utilizing 
+                        Git for version control and maintaining thorough documentation are integral parts of my 
+                        role. This hands-on experience is significantly deepening my understanding of front-end 
+                        development and preparing me for future professional challenges in the field.</p>
+                    </div>
+                </div>
+
+                <div class="detail-container">
                     <h2 class="experience-sub-title">Development Skills</h2>
                     <div class="article-container">
                         <article>
@@ -178,8 +199,7 @@
     </section>
 
     <section id="contact">
-        <p class="section__text__p1">Get In Touch</p>
-        <h1 class="title">Contact Me</h1>
+        <h1 class="contact-title">Get In Touch</h1>
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <img src="./asset/Email.png" alt="Email icon" class="icon contact-icon" onclick="location.href='mailto:pathakmanthan55@gmail.com'">
