--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
                 <ul class="nav-links">
                     <li><a href="#desktop-nav">Profile</a>
                     <li><a href="#about">About</a>
+                    <li><a href="#projects">Projects</a>
                     <li><a href="#Experience">Experience</a>
                     <li><a href="#contact">Contact</a>
                 </ul>
@@ -304,6 +305,7 @@
                 <ul class="ham-nav-links">
                     <li><a href="#hamburger-nav">Profile</a>
                     <li><a href="#about">About</a>
+                    <li><a href="#projects">Projects</a>
                     <li><a href="#Experience">Experience</a>
                     <li><a href="#contact">Contact</a>
                 </ul>
