--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
         </div>
       </div>
 
-      <img
+      <!-- <img
         src="./asset/arrown-d.png"
         alt="arrow icon"
-        class="icon arrow"
+        class="icon-a arrow"
         onclick="location.href='./#projects'"
-      />
+      /> -->
     </section>
 
     <section id="projects">
@@ -164,8 +164,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">To-Do List
-            </h2>
+            <h2 class="experience-sub-title project-title">To-Do List</h2>
             <div class="btn-container">
               <a href="https://tasktrail-pm.netlify.app/" target="_blank">
                 <button class="btn-color-2 project-btn">Live Demo</button>
@@ -202,15 +201,38 @@
               </a>
             </div>
           </div>
+
+          <div class="projects-container color-container">
+            <div class="article-container">
+              <img
+                src="./asset/project-3.png"
+                alt="Project 3"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Personal Blog</h2>
+            <div class="btn-container">
+              <a href="https://blognest-pm.netlify.app/" target="_blank">
+                <button class="btn-color-2 project-btn">Live Demo</button>
+              </a>
+              <a
+                href="https://github.com/PathakMan/Rock-Paper-Scissor-Game"
+                target="_blank"
+              >
+                <button class="btn-color-2 project-btn">GitHub</button>
+              </a>
+            </div>
+            <p class="disclaimer">*Disclaimer* - Site is in progress</p>
+          </div>
         </div>
       </div>
 
-      <img
+      <!-- <img
         src="./asset/arrown-d.png"
         alt="arrow icon"
-        class="icon arrow"
+        class="icon-a arrow"
         onclick="location.href='./#Experience'"
-      />
+      /> -->
     </section>
     <section id="Experience">
       <p class="section__text__p1">Explore More About my</p>
@@ -329,12 +351,12 @@
         </div>
       </div>
 
-      <img
+      <!-- <img
         src="./asset/arrown-d.png"
         alt="arrow icon"
-        class="icon arrow"
+        class="icon-a arrow"
         onclick="location.href='./#contact'"
-      />
+      /> -->
     </section>
 
     <section id="contact">
@@ -372,18 +394,11 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
-
-        <div class="hamb-nav-links">
-          <ul class="ham-nav-links">
-            <li><a href="#hamburger-nav">Profile</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#Experience">Experience</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
       </nav>
       <p>Copyright &#169; 2024 Manthan Pathak All Right Reserved.</p>
+      <div id="last-updated">
+        <p id="last-updated-date"></p>
+      </div>
     </footer>
 
     <script src="script.js"></script>
